[project]
name = "blog-generation-using-llama-2-7b-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctransformers>=0.2.27",
    "fastapi>=0.115.0",
    "langchain-community>=0.3.2",
    "langchain>=0.3.3",
    "python-box>=7.2.0",
    "sentence-transformers>=3.2.0",
    "streamlit>=1.39.0",
    "uvicorn>=0.31.1",
]
